@@ -4,10 +4,16 @@ isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-pac
 
 
 ##################################################################
+opsi-winst/opsi-script (4.12.1.2) stable; urgency=low
+
+  * add oslistedit to projectfiles
+  * fixes in oslistedit
+
+-- Detlef Oertel <d.oertel@uib.de>  Fri, 12 Apr 2019:15:00:00 +0200
+
 opsi-winst/opsi-script (4.12.1.1) stable; urgency=low
 
   * fix in oswmi (give stringlist as stringlist)
-
 
 -- Detlef Oertel <d.oertel@uib.de>  Thu, 04 04 2019:15:00:00 +0200
 
